[tool.poetry]
name = "get-job"
version = "0.1.0"
description = ""
authors = ["SchneiderSix <104461916+SchneiderSix@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.2.8"
langchain-community = "^0.2.7"
langchain-openai = "^0.1.16"
beautifulsoup4 = "^4.12.3"
faiss-cpu = "^1.8.0.post1"
load-dotenv = "^0.1.0"
tiktoken = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
